--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chrome-headless",
+  "name": "cs-scraper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "couchsurfing.js",
   "dependencies": {
     "puppeteer": "^3.1.0",
     "puppeteer-autoscroll-down": "^0.1.5",
